feat: add mail handler php

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ header {
 
 .btn-cta:hover {
     background-color: #faeab0;
-    box-shadow: 0 6px 15px rgba(246, 222, 108, 0.4);
+    box-shadow: 0 6px 15px rgba(246, 222, 108, 0.4); 
 }
 
 .btn-cta:active {
@@ -224,8 +224,8 @@ header {
 
     .form-control,
     .form-select {
-        height: 50px;        /* Altura maior (o padrão é ~38px) */
-        font-size: 1.1rem;   /* Aumenta levemente a letra para preencher */
+        height: 40px;
+        font-size: 1.1rem;
     }
     
 }
